--- a/flask/templates/hello.html
+++ b/flask/templates/hello.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Hello from Flask</title>
 </head>
 <body>
-<title>Hello from Flask</title>
 {% if name %}
 <h1>Hello {{ name }}!</h1>
 {% else %}
 <h1>Hello World!</h1>
 {% endif %}
-<a href="http://localhost:{{ FLASK_RUN_PORT }}">Flask</a><br>
-<a href="http://localhost:{{ SPRING_RUN_PORT }}">Spring</a><br>
+<main style='display:flex; flex-direction:column;'>
+  <a href="http://localhost:{{ FLASK_RUN_PORT }}">Flask</a>
+  <a href="http://localhost:{{ SPRING_RUN_PORT }}">Spring</a>
+  <a href="/join?query=a">query</a>
+</main>
 </body>
 </html>
 
