--- a/spring/src/main/resources/templates/login.html
+++ b/spring/src/main/resources/templates/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <a href="http://localhost:8080/oauth2/authorization/google">google</a>
-    <a href="http://localhost:8080">back</a>
+    <a href="http://kdt-please.store/oauth2/authorization/google">google</a>
+    <a href="http://kdt-please.store/">back</a>
 </head>
 <body>
 
